# PIRTM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PATENT PLEDGE.md  README.md  SECURITY.md  __init__.py  conftest.py  pyproject.toml  pyproject.toml.test
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
applications/: gravitational_wave_detection.md  neural_tensor_models.md: Prime-indexed adaptive cognitive systems  quantum_clocks.md
backend/: __init__.py  numpy_backend.py
bindings/: pirtm_runtime_bindings.py
channels/: __init__.py  shim.py
core/: __init__.py  certify.py  executor.py  gain.py  projection.py  recurrence.py
dialect/: __init__.py  pirtm_types.py
docs/: ADR-006-IMPLEMENTATION-SUMMARY.md  DAYS-0-14-COMPLETE-SUMMARY.md  GATES-DAY-0-7-COMPLETE.md  GATES-DAY-14-16-COMPLETE.md  GATES-DAY-14-COMPLETE.md  GATES-DAY-7-14-COMPLETE.md  IMPLEMENTATION-DAYS-0-16-COMPLETE.md  PHASE_1_COMPLETION_REPORT.md  PHASE_1_EXPANDED.md  PHASE_2_COMPLETION_REPORT.md  PHASE_2_EXPANDED.md  PHASE_3_AND_MIRROR_COMPLETE_SUMMARY.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_EXPANDED.md  PHASE_4_EXPANDED.md  PIRTM Roadmap.md  PIRTM Tier 7 Expansion.md  PIRTM_LANGUAGE_SPEC.md  PIRTM_LIBERATION_ROADMAP.md  PROGRESS-REPORT-DAYS-0-14.md  PROJECT_TRACKER_SETUP.md  README.md  What do you think PIRTM to succeed Python_.md  architecture.md  conformance.md  math_spec.md  pirtm-v2-9-attested-governor-a-Hepox3xsS.ebSq2468Ucuw.md  primer.md  q2_external_link.md  release_checklist.md  requirements.md  riemann.md
docs/adr/: ADR-004-pirtm-mlir-dialect.md  ADR-004.md  ADR-005-adr-process-layout.md  ADR-006-dialect-type-layer-gate.md  ADR-007-prime-mod-migration.md  ADR-008-linker-coupling-gates.md  ADR-009-digital-vin-and-glass-box-identity.md  Governance-Truth.md  MADR-TEMPLATE.md  README.md
docs/api/: README.md  certify.md
docs/extensions/: langlands_prism.md  moonshine.md  multiplicity.md  primer.md
docs/formats/: IANA-REGISTRATION-GUIDE.md  README.md
docs/migration/: certify-v1.md  prime-to-mod-rename.md  v0.1.0.md  v0.1.1.md
docs/plans/: ADR-000_Thread.md  ADR-006_ETP.md  ADR-007_ETP.md  ADR-008_ETP.md  ADR-009_ETP.md  ADR-010_ETP.md  ADR-011_ETP.md  ADR-012_ETP.md  ADR-013_ETP.md  Option A_ Fix PIRTM First (2 weeks)_✅ Clean API be.md  PIRTM Core Completion.md  PIRTM Tier 1 Expansion.md  PIRTM Tier 2 Expansion.md  PIRTM Tier 3 Expansion.md  PIRTM Tier 4 Expansion.md  PIRTM Tier 5 Expansion.md  PIRTM Tier 6 Expansion.md  PIRTM Transpiler Spec.md  PIRTM language specification.md  PIRTM v0.1.1 Release Approval.md  README.md  simulation_migration_map.md  v0.1.1-github-release-body.md  v0.1.2-github-release-body.md
docs/plans/issue-drafts/: ETP-pass1-013-011-008.md  ETP-pass2-009-007.md  ETP-pass3-012.md  ETP-pass4-010.md  ETP-pass5-006.md  PIRTM repo scan-3-1-25.md  R1-define-release-scope-and-target-tag.md  R10-consolidate-plans-docs-and-support-matrix.md  R2-finalize-release-notes-and-migration-notes.md  R3-execute-release-checklist-and-cut-tagged-release.md  README.md  (+6 more)
examples/: README.md  basic_contractive_system.json  certificate_usage.py  composite_modulus_system.json  example_multiplicity_flow.ipynb  example_peoh_proof.ipynb  example_qai_integration.ipynb  full_pipeline.py  multimodule_network.json  quickstart.py  tightly_coupled_system.json  transpile_computation.json  transpile_two_layer_nn.json
frontend/: README.md  metadata.json  package-lock.json
frontend/src/: styles.css
integrations/: __init__.py  q2_gap.py
mlir/: PHASE_3_MIRROR_DOCUMENTATION.md  PIRTM_DIALECT_REFERENCE.md  llvm_codegen.py  verification_pass.py  verify_contractivity_spec.cc
notebooks/: PIRTM_Introduction.ipynb  QAI_with_PIRTM.ipynb  RecursiveTensor_EigenSimulation.ipynb
pirtm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: bump_version.py
spectral/: __init__.py  aaa.py  cli_fingerprint.py  continuation.py  fingerprint.py  growing_petc_enforcer.py  laplacian.py
src/core/: __init__.py  infinite_prime.py  petc.py  pir_tensor.py  recurrence.py  recursive_ops.py  spectral_decomp.py  types.py
src/pirtm/: __init__.py  adaptive.py  audit.py  certify.py  cli.py  conformance.py  csc.py  csl.py  csl_gate.py  fixed_point.py  gain.py  gate.py  infinite_prime.py  lambda_bridge.py  monitor.py  orchestrator.py  petc.py  petc_bridge.py  projection.py  qari.py  recurrence.py  spectral_decomp.py  spectral_gov.py  telemetry.py  types.py  weights.py
src/runtime/: CMakeLists.txt  libpirtm_runtime.cpp  test_runtime.cpp
src/simulations/: qari_module.py  quantum_feedback.py  riemann_verification.py
tests/: ADR-007-DAY-3-7-COMPLETION.py  README.md  VERIFY-ALL-GATES.py  __init__.py  conftest.py  demo_day_14_16_workflow.py  demo_day_14_workflow.py  mlir_diagnostic_verifier.py  pirtm-types-basic.mlir  test_ace_etp_baseline.py  test_ace_matrix_immutability.py  test_ace_protocol.py  test_ace_protocol_injection.py  test_ace_trl_metadata.py  test_adaptive.py  test_audit.py  test_certify.py  test_cli_petc.py  test_cli_transpile.py  test_commitment_collision.py  test_conformance.py  test_csc.py  test_csl.py  test_csl_gate.py  test_day90_benchmark.py  test_day_14_contractivity.py  test_day_3_7_coprime_merge.py  test_day_7_14_round_trip.py  test_dialect_types.py  test_drmm_bridge.py  test_feedback_bridge.py  test_fixed_point.py  test_gain.py  test_gate.py  test_infinite_prime.py  test_integration.py  test_lambda_bridge.py  test_llvm_codegen.py  test_mlir_emission.py  test_module_reordering.py  (+27 more)
tests/conformance/: test_emission_gate_policies.py  test_l0_invariants.py  test_spec_compliance.py  test_witness_dual_hash.py
tests/fixtures/: basic.pirtm.bc  generate_fixtures.py  module_a.pirtm.bc  module_unstable.pirtm.bc  secondary.pirtm.bc
tools/: grep_gates.py  pirtm_inspect.py
transpiler/: __init__.py  cli.py  mlir_emitter_canonical.py  mlir_lowering.py  pirtm_bytecode.py  pirtm_link.py  pirtm_perf.py  pirtm_predict.py  pirtm_reorder.py
type_inference/: __init__.py
(+47 files in other folders)
