[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pirtm"
version = "0.1.0dev0"
description = "Prime-Indexed Recursive Tensor Mathematics — certified contractive core"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tyler Van Osdol" },
    { name = "Ryan Van Gelder" },
]
keywords = ["tensor", "prime", "contraction", "spectral", "multiplicity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
]

[project.scripts]
pirtm = "pirtm.cli:main"
pirtm-conformance = "pirtm.conformance:_cli_main"

[project.optional-dependencies]
legacy = [
    "sympy>=1.12",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
release = [
    "build>=1.2",
    "twine>=5.0",
]
all = ["pirtm[legacy,dev,release]"]

[project.urls]
Homepage = "https://github.com/MultiplicityFoundation/PIRTM"
Repository = "https://github.com/MultiplicityFoundation/PIRTM"
Issues = "https://github.com/MultiplicityFoundation/PIRTM/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pirtm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["pirtm"]
